--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
-        <%= form_for(current_user) do |f| %>
+        <%= form_for(current_user, url: users_path) do |f| %>
             <%= render 'shared/error_messages', object: f.object %>
         
             <%= f.label :name %>
