add posting microposts

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,33 @@
-<h1>
-    <%= gravatar_for @user %>
-    <%= @user.name %>
-</h1>
-
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h2 class="panel-title">Profile</h2>
-    </div>
-    <div class="panel-body"><%= @user.profile %></div>
-    <div class="panel-footer">
-        <span class="glyphicon glyphicon-map-marker"></span>
-        <%= @user.region %>
+<div class="row">
+    <aside class="col-md-4">
+        <section class="user_info">
+            <h1>
+                <%= gravatar_for @user %>
+                <%= @user.name %>
+            </h1>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h2 class="panel-title">Profile</h2>
+                </div>
+                <div class="panel-body"><%= @user.profile %></div>
+                <div class="panel-footer">
+                    <span class="glyphicon glyphicon-map-marker"></span>
+                    <%= @user.region %>
+                </div>
+            </div>
+        </section>
+    </aside>
+    <div class="col-md-8">
+        <% if @user.microposts.any? %>
+            <h3>Microposts (<%= @user.microposts.count %>)</h3>
+            <ol class="microposts">
+                <%# render partial: 'microposts/micropost', collection: @microposts
+                   @microposts.each do |micropost|
+                     render partial: 'microposts/micropost', locals: { micropost: micropost }
+                   end
+                %>
+                <%= render @microposts %>
+            </ol>
+        <% end %>
     </div>
 </div>
