--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,6 +22,9 @@
                 <li class="list-group-item">
                     <%= link_to "Followers",  :controller => "users", :action => "followers" %>
                 </li>
+                <li class="list-group-item">
+                    <%= link_to "Favorites",  :controller => "users", :action => "favorites" %>
+                </li>
             </ul>
         </section>
     </aside>
