tweak followings list, followers list, favorites list

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,6 +7,9 @@
             <section class="micropost_form">
                 <%= render 'shared/micropost_form' %>
             </section>
+            <section class="user_menu">
+                <%= render 'shared/menu', user: @user %>
+            </section>
         </aside>
         <div class="col-md-8">
             <h3>Micropost Feed</h3>
