--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,7 +3,7 @@
         <%= gravatar_for user %>
     </div>
     <div class="media-body">
-        <h3><%= user.name %></h3>
+        <h3><%= link_to user.name, user %></h3>
         <%= user.email %>
     </div>
 </div>
