--- a/app/views/users/favorites.html.erb
+++ b/app/views/users/favorites.html.erb
@@ -1,6 +1,18 @@
-<h3><%= @user.name %>'s Favorite Micropost</h3>
-<% if @microposts.any? %>
-    <ol class="microposts">
-        <%= render @microposts %>
-    </ol>
-<% end %>
+<div class="row">
+    <aside class="col-md-4">
+        <section class="user_info">
+            <%= render 'shared/user_profile', user: @user %>
+        </section>
+        <section class="user_menu">
+            <%= render 'shared/menu', user: @user %>
+        </section>
+    </aside>
+    <div class="col-md-8">
+        <h3><%= @user.name %>'s Favorite Micropost</h3>
+        <% if @microposts.any? %>
+            <ol class="microposts">
+                <%= render @microposts %>
+            </ol>
+        <% end %>
+    </div>
+</div>
