--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -1,2 +1,14 @@
-<h3><%= @user.name %>'s Following Users</h3>
-<%= render @users %>
+<div class="row">
+    <aside class="col-md-4">
+        <section class="user_info">
+            <%= render 'shared/user_profile', user: @user %>
+        </section>
+        <section class="user_menu">
+            <%= render 'shared/menu', user: @user %>
+        </section>
+    </aside>
+    <div class="col-md-8">
+        <h3><%= @user.name %>'s Following Users</h3>
+        <%= render @users %>
+    </div>
+</div>
