add pagenation to user profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,9 @@
                      render partial: 'microposts/micropost', locals: { micropost: micropost }
                    end
                 %>
+                <%= page_entries_info @microposts %>
                 <%= render @microposts %>
+                <%= paginate @microposts %>
             </ol>
         <% end %>
     </div>
